# ai-automation-finance

./: .env.template  CODE_OF_CONDUCT.md  License.md  README.md  comparison_crew.py  main.py  pyproject.toml  replit.nix
Reports/: amd_nvda.md
logs/: log-0226-13-03-2024
tools/: gmail_tools.py  openbb_tools.py  sec_tools.py
tools/templates/flowise/: AMD Chatflow.json  If Chatflow.json  nvda chat Chatflow.json
tools/templates/n8n/: Nvdia_10K.json
